# circus-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  circus.ini  circus_mcp_system_design.md  mcp_config.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
circus_mcp_manager/: README.md  app.py  main.py  pyproject.toml  requirements.txt
circus_mcp_manager/config/: config.yaml  log_patterns.yaml  mcp_config.json
circus_mcp_manager/src/circus_manager/: __init__.py  config_handler.py  manager.py  watcher.py
circus_mcp_manager/src/controller/: __init__.py  mcp_controller.py
circus_mcp_manager/src/domain/: __init__.py  process.py
circus_mcp_manager/src/infrastructure/: __init__.py  repositories.py
circus_mcp_manager/src/io_controller/: __init__.py  input_handler.py  output_monitor.py  stream_manager.py
circus_mcp_manager/src/log_parser/: __init__.py  classifier.py  parser.py  patterns.py
circus_mcp_manager/src/mcp_server/: __init__.py  resources.py  server.py  tools.py
circus_mcp_manager/src/service/: __init__.py  log_service.py  process_service.py
circus_mcp_manager/src/utils/: __init__.py  exceptions.py  helpers.py
circus_mcp_manager/tests/: test_circus_manager.py  test_integration.py  test_io_controller.py  test_log_parser.py  test_new_architecture.py
config/: circus.ini
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md
src/circus_mcp/: __init__.py  cli.py  main.py  manager.py  mcp_server.py
src/circus_mcp/circus_manager/: config_handler.py  manager.py
src/circus_mcp/utils/: __init__.py  exceptions.py
tests/: simple_test.py  test_aether_config.py  test_io_controller.py  test_mcp_tools.py
